minio/helm/operator/operator-console-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minio-console
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: minio-console.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: console
                port:
                  number: 9090
